# tweaker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/core/: base_module.py
src/core/modules/contact/: contact.py  email.py
src/core/modules/regex/: regex.py  regex_patterns.py
src/core/modules/region/: region_matcher.py
src/error/: errors.py
tweaker/: __init__.py
tweaker/core/: base_module.py  tweaker.py
tweaker/core/modules/contact/: address.py  email.py  module.py  phone.py
tweaker/core/modules/currency/: currency_parser.py  enums.py  mapping.py  module.py
tweaker/core/modules/datetime/: module.py  time_mapping.py
tweaker/core/modules/datetime_util/: datetime_util.py
tweaker/core/modules/enums/: enum_toolkit.py  module.py
tweaker/core/modules/internal/cast/: module.py
tweaker/core/modules/internal/fuzzy/: module.py
tweaker/core/modules/internal/regex/: module.py
tweaker/core/modules/internal/text/: module.py
tweaker/core/modules/keyword/: module.py
tweaker/core/modules/measure/: module.py
tweaker/core/modules/regex/: patterns.py  regex.py
tweaker/core/modules/region/: municipalities.py  provinces.py  region_matcher.py
tweaker/core/modules/text/: text_module.py  text_toolkit.py
tweaker/core/modules/types_util/: types.py
tweaker/dev/: main.py
tweaker/tests/: conftest.py  test_sanity.py
tweaker/tests/modules/: test_regex.py  test_text.py
tweaker/tests/modules/testdata/: emails.py  numbers.py  text.py  urls.py
