[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tweaker"
version = "0.1.0"
description = "Reusable transformation tools for ETL pipelines"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name="Michael Pearce", email="firstflush@protonmail.com" }]
license = { text = "MIT" }
dependencies = [
    "dateparser==1.2.2",
    "dnspython==2.7.0",
    "email_validator==2.2.0",
    "exceptiongroup==1.3.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "phonenumbers==9.0.9",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "RapidFuzz==3.14.1",
    "regex==2024.11.6",
    "six==1.17.0",
    "tomli==2.2.1",
    "typing_extensions==4.14.1",
    "tzlocal==5.3.1",
]

[project.urls]
Homepage = "https://github.com/firstflush/tweaker"
